# ruler

./: .gitignore
alliance/: CMakeLists.txt  package.xml
alliance/src/: alliance_novo.cpp
mrta_archs/alliance/: CMakeLists.txt  package.xml
mrta_archs/alliance/launch/: alliance.launch
mrta_archs/alliance/src/: alliance_low_level_node.cpp.autosave  alliance_node.cpp  node.cpp
mrta_archs/alliance/test/: utest.cpp
mrta_archs/alliance_test/: CMakeLists.txt  alliance_plugins.xml  package.xml
mrta_archs/alliance_test/bag/: robot1-border_protection-motivation-new.csv  robot1-border_protection-motivation.csv  robot1-report-motivation-new.csv  robot1-report-motivation.csv  robot1-wander-motivation-new.csv  robot1-wander-motivation.csv  robot2-border_protection-motivation-new.csv  robot2-border_protection-motivation.csv  robot2-report-motivation-new.csv  robot2-report-motivation.csv  robot2-wander-motivation-new.csv  robot2-wander-motivation.csv  robot3-border_protection-motivation-new.csv  robot3-border_protection-motivation.csv  robot3-report-motivation-new.csv  robot3-report-motivation.csv  robot3-wander-motivation-new.csv  robot3-wander-motivation.csv
mrta_archs/alliance_test/config/: robot1_alliance_params.yaml  robot1_rosaria_params.yaml  robot2_alliance_params.yaml  robot2_rosaria_params.yaml  robot3_alliance_params.yaml  robot3_rosaria_params.yaml  robot4_alliance_params.yaml  robot4_rosaria_params.yaml  robot5_alliance_params.yaml  robot5_rosaria_params.yaml  rosconsole.conf  tasks_alliance_params.yaml
mrta_archs/alliance_test/launch/: multiple_robots.launch  single_robot.launch
mrta_archs/alliance_test/others/: README.md  mobilesim.bash  run_alliance_test_mobilesim.bash
mrta_archs/alliance_test/src/: alliance_novo.cpp
ruler/: CMakeLists.txt  README.md  package.xml
ruler/config/: rosconsole.conf
ruler/include/nodes/: battery_simulation_node.h  metrics_service_server.h  ruler_node.h  task_simulation_node.h
ruler/include/ruler/: battery_charge_simulation.h  battery_simulation.h  consumable_resource.h  consumable_resource_reservation_request.h  continuous_consumable_resource.h  continuous_reusable_resource.h  discrete_consumable_resource.h  discrete_reusable_resource.h  event.h  event_types.h  metrics_estimator.h  preemptive_task.h  preemptive_task_simulation.h  profile.h  resource.h  resource_interface.h  resource_reservation_request.h  reusable_resource.h  reusable_resource_reservation_request.h  robot.h  ruler.h  task.h  task_event.h  task_function.h  task_simulation.h  unary_consumable_resource.h  unary_reusable_resource.h
ruler/include/utilities/: continuous_exponential_function.h  continuous_linear_function.h  continuous_pulse_function.h  continuous_signal_type.h  continuous_step_function.h  discrete_exponential_function.h  discrete_linear_function.h  discrete_pulse_function.h  discrete_signal_type.h  discrete_step_function.h  enum_converter.h  event.h  exponential_function.h  function.h  has_id.h  has_name.h  interval.h  linear_function.h  non_unary_signal_type.h  observer.h  pulse_function.h  ros_message_converter.h  ros_node.h  signal_type.h  simulation.h  step.h  step_function.h  subject.h  toggle_event.h  unary_pulse_function.h  unary_signal_type.h  unary_step_function.h  utilities.h
ruler/launch/: battery_simulation.launch  ruler.launch  simulation.launch  task_simulation.launch
ruler/others/uml/: ruler_v0.dia
ruler/src/: battery_simulation_node.cpp  ruler_node.cpp  task_simulation_node.cpp
ruler/src/nodes/: battery_simulation_node.cpp  metrics_service_server.cpp  ruler_node.cpp  task_simulation_node.cpp
ruler/src/ruler/: battery_charge_simulation.cpp  battery_simulation.cpp  continuous_consumable_resource.cpp  continuous_reusable_resource.cpp  discrete_consumable_resource.cpp  discrete_reusable_resource.cpp  event.cpp  event_types.cpp  metrics_estimator.cpp  preemptive_task.cpp  preemptive_task_simulation.cpp  resource_interface.cpp  resource_reservation_request.cpp  robot.cpp  task.cpp  task_event.cpp  task_function.cpp  task_simulation.cpp  unary_consumable_resource.cpp  unary_reusable_resource.cpp
ruler/src/utilities/: continuous_exponential_function.cpp  continuous_linear_function.cpp  continuous_pulse_function.cpp  continuous_signal_type.cpp  continuous_step_function.cpp  discrete_exponential_function.cpp  discrete_linear_function.cpp  discrete_pulse_function.cpp  discrete_signal_type.cpp  discrete_step_function.cpp  event.cpp  exception.cpp  exponential.cpp  exponential_function.cpp  function.cpp  has_name.cpp  linear_function.cpp  noisy_duration.cpp  observer.cpp  ros_node.cpp  simulation.cpp  step.cpp  step_function.cpp  subject.cpp  toggle_event.cpp  unary_pulse_function.cpp  unary_signal_type.cpp  unary_step_function.cpp
ruler/test/: simulations_utest.cpp  utest.cpp
ruler_metrics/: CMakeLists.txt  README.md  metrics_plugins.xml  package.xml
ruler_metrics/include/ruler/: battery_consumption_estimator.h  displacement_estimator.h  metrics_plugins.h
ruler_metrics/src/: metrics_plugins.cpp
ruler_metrics/src/ruler/: battery_consumption_estimator.cpp  displacement_estimator.cpp
ruler_metrics/test/: utest.cpp
ruler_msgs/: CMakeLists.txt  package.xml
ruler_msgs/msg/: Resource.msg  Task.msg
ruler_msgs/srv/: CalculateMetrics.srv  DischargeBattery.srv
ruler_test/: CMakeLists.txt  README.md  package.xml
ruler_test/config/: robot1_battery_params.yaml  robot1_ruler_params.yaml  robot2_battery_params.yaml  robot2_ruler_params.yaml  robot3_ruler_params.yaml  rosconsole.conf  ruler_metrics_params.yaml  ruler_test_params.yaml  simulation_params.yaml  task_executor_params.yaml  task_executor_params.yaml.autosave  task_generator_params.yaml
ruler_test/include/ruler_test/: ruler_test_node.h  task_execution_simulation.h  task_generator_node.h  (+2 more)
ruler_test/launch/: mr_ruler.launch  multiple_robots.launch  ruler.launch  ruler_test.launch  single_battery.launch  task_execution_simulator_node.launch  task_generator_node.launch
ruler_test/src/: ruler_test_node.cpp  task_execution_simulator_node.cpp  task_generator_node.cpp
(+122 files in other folders)
