<?xml version="1.0"?>
<package>
  <name>ruler</name>
  <version>0.1.0</version>
  <description>This package contains the library of the ruler stack, as well as, its main nodes nodes.</description>

  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/adrianohrl/ruler/wiki</url>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ruler_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ruler_msgs</run_depend>

  <export>
  </export>
</package>
