<?xml version="1.0"?>
<package>
  <name>ruler_metrics</name>
  <version>0.1.0</version>
  <description>This package contains some plugins for robot's metrics estimations during the exxecution of a given task.</description>

  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/adrianohrl/ruler_metrics/wiki</url>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>ruler</build_depend>

  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>ruler</run_depend>

  <export>
    <ruler plugin="${prefix}/metrics_plugins.xml"/>
  </export>
</package>
