<?xml version="1.0"?>
<package>
  <name>ruler_test</name>
  <version>0.1.0</version>
  <description>This package tests the library of the ruler stack.</description>

  <maintainer email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</maintainer>
  <license>Apache 2.0</license>
  <url type="website">https://github.com/adrianohrl/ruler/wiki</url>
  <author email="adrianohrl@unifei.edu.br">Adriano Henrique Rossette Leite</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>ruler</build_depend>
  <build_depend>ruler_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>ruler</run_depend>
  <run_depend>ruler_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

  <export>
  </export>
</package>
